@@ -2,6 +2,8 @@ Version 1.8.9
 - BUG: Issue #661: memory leak committing multiple
        working copies. (Stefan)
 - BUG: Issue #662: drawing bug in progress dialog. (Stefan)
+- BUG: issue #665: inherited properties give
+       unexpected results. (Stefan)
 
 Version 1.8.8
 - BUG: Issue #640: Restore after commit - Unchecked
